--- a/_config.yml
+++ b/_config.yml
@@ -2,28 +2,27 @@
 remote_theme: andrewbanchich/forty-jekyll-theme
 plugins:
   - jekyll-remote-theme
+
 title: Forty
 subtitle: by HTML5 UP
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+baseurl: "/Substance-Use-and-Mental-Health-Awareness" # correct subpath for your site
+url: "https://wilburdid.github.io" # base URL for GitHub Pages
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+  name: "Your Name"
+  street_address: 1234 Somewhere Road
+  city: Nashville
+  state: TN
+  zip_code: 55555
+  country: United States of America
+  phone: (716) 555-5555
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
 tiles-count: 6
 
-# social settings (key must match name of font awesome icon)
-# see https://fontawesome.com/icons?d=gallery&p=2&s=brands
-# Icons are not shown if value is empty
-# You need to restart jekyll for changes to have an effect
+# social settings
 socials:
   GitHub: https://github.com/andrewbanchich
   GitLab:
@@ -44,4 +43,4 @@ exclude:
 - "*.gemspec"
 - LICENSE.md
 - CONTRIBUTING.md
-- README.md 
+- README.md
