--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ remote_theme: andrewbanchich/forty-jekyll-theme
 plugins:
   - jekyll-remote-theme
 
-title: Forty
-subtitle: by HTML5 UP
+title: beAware
+subtitle: by Wilbur Liu & Rohin Mainali
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/Substance-Use-and-Mental-Health-Awareness" # correct subpath for your site
