--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ plugins:
 title: beAware
 subtitle: by Wilbur Liu & Rohin Mainali
 email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: The Path to Substance Abuse Prevention and Mental Health Awareness
 baseurl: "/Substance-Use-and-Mental-Health-Awareness" # correct subpath for your site
 url: "https://wilburdid.github.io" # base URL for GitHub Pages
 author:
