--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ plugins:
 title: beAware
 subtitle: by Wilbur Liu & Rohin Mainali
 email: beAwareSUMHA@gmail.com
-description: The Path to Substance Abuse Prevention and Mental Health Awareness
+description: The Path to Substance Abuse Prevention
 baseurl: "/Substance-Use-and-Mental-Health-Awareness" # correct subpath for your site
 url: "https://wilburdid.github.io" # base URL for GitHub Pages
 author:
